# bagua-OS

./: BaGua-OS-Acceptance-Report.md  Cargo.toml  Makefile  README.md  TECH_ISSUES.md  merge_elf.py
.cargo/: config.toml
iso_root/: limine.conf
iso_root/boot/: bagua-os-kernel  limine-bios.sys
kernel/: Cargo.toml  build.rs  linker.ld
kernel/src/: allocator.rs  boot64.S  elf.rs  gdt.rs  interrupts.rs  main.rs  memory.rs  minimal_boot.s  pit.rs  serial.rs  syscall.rs
src/: boot.rs  lib.rs  main.rs
src/agent/: mod.rs  orchestrator.rs
src/hal/: compat.rs  device.rs  mod.rs
src/kernel/: audit.rs  buffer.rs  elimination.rs  fork_exec.rs  interrupt.rs  memory.rs  mod.rs  pagetable.rs  polarity.rs  process.rs  scheduler.rs  self_comp.rs  task_gate.rs  vfs.rs
